package co.systemhome.recargasonline.enums;


public enum ErrorGeneric {
	
	ERROR_DATOS_ENTRADA ,
	ERROR_VALOR_CONCEPTO,
	ERROR_VALOR,
	ERROR_VALOR_OPERADOR,
	ERROR_VALOR_OPERADOR_NO_EXISTE,
	ERROR_USER_REQUERIDO,
	ERROR_NUMERO_IDENTIFICACION_REQUERIDO,
	ERROR_NUMERO_MOVIL,
	ERROR_NUMERO_MOVIL_NO_ES_NUMERO
	
}
