package co.systemhome.recargasonline.repository;



import org.springframework.data.jpa.repository.JpaRepository;

import co.systemhome.recargasonline.model.Recargas;


public interface RecargasRepository  extends JpaRepository<Recargas, String> {
	

	

}
